# qcv

./: .hgignore  3DDrawingElementList.h  3DLineList.cpp  3DMatrix.h  3DMatrix_inline.h  3DMeshList.cpp  3DMeshList.h  3DPointList.cpp  3DPointList.h  3DPointVector.h  3DRowVector.h  3DRowVector_inline.h  CMakeLists.txt  README.md  README.txt  changelog.txt  cinterface.cpp  cinterface.h  clipLine.h  clock.cpp  clock.h  clockHandler.cpp  clockHandler.h  clockTreeDlg.cpp  clockTreeDlg.h  clockTreeItemModel.cpp  clockTreeItemModel.h  clockTreeNode.cpp  clockTreeNode.h  clockTreeView.cpp  clockTreeView.h  colorEncoding.cpp  colorEncoding.h  colors.cpp  colors.h  display.cpp  display.h  displayCEImageList.cpp  displayCEImageList.h  displayImageList.cpp  (+69 more)
examples/anaglyphStereo/: CMakeLists.txt  anaglyphStereo  anaglyphStereo.cpp  anaglyphStereo.pro
examples/checkStereoPair/: CMakeLists.txt  checkStereoPair.cpp  checkStereoPair.pro
examples/imgPlayer/: CMakeLists.txt  imgPlayer.cpp  imgPlayer.pro
examples/imgScaler/: CMakeLists.txt  main.cpp
examples/stereoExample/: CMakeLists.txt  imgScaler.cpp  imgScaler.h  main.cpp  stereo.cpp  stereo.h  stereo.pro
examples/surfExample/: CMakeLists.txt  main.cpp
examples/toyClockExample/: CMakeLists.txt  toyClockExample.cpp  toyClockExample.pro
modules/misc/: CMakeLists.txt  camera.cpp  camera.h  feature.h  rigidMotion.h  stereoCamera.cpp  stereoCamera.h
modules/operators/: CMakeLists.txt  dynProgOp.cpp  dynProgOp.h  featureStereoOp.cpp  featureStereoOp.h  gfttFreakOp.cpp  gfttFreakOp.h  houghTransformOp.cpp  houghTransformOp.h  imgScalerOp.cpp  imgScalerOp.h  kltTrackerOp.cpp  kltTrackerOp.h  linearHoughTransform.cpp  linearHoughTransform.h  monoTrackerOp.h  roadPlaneDetectionOp.cpp  roadPlaneDetectionOp.h  sobelOp.cpp  sobelOp.h  stereoOp.cpp  stereoOp.h  stereoTrackerOp.cpp  stereoTrackerOp.h  surfOp.cpp  surfOp.h
modules/paramEditor/: 3DVectorParam.cpp  3DVectorParam.h  3DVectorParamEditor.cpp  3DVectorParamEditor.h  CMakeLists.txt  baseParamEditorWidget.h  boolParam.cpp  boolParam.h  boolParamEditor.cpp  boolParamEditor.h  buttonParam.cpp  buttonParam.h  buttonParamEditor.cpp  buttonParamEditor.h  ceParameter.h  colorParam.cpp  colorParam.h  colorParamEditor.cpp  colorParamEditor.h  dbl2DParam.cpp  dbl2DParam.h  dbl2DParamEditor.cpp  dbl2DParamEditor.h  dirPathParam.cpp  dirPathParam.h  displayStateParam.cpp  displayStateParam.h  displayStateParamEditor.cpp  displayStateParamEditor.h  doubleEditor.cpp  doubleEditor.h  doubleParam.cpp  doubleParam.h  doubleParamEditor.cpp  doubleParamEditor.h  enumParam.h  enumParamBase.cpp  enumParamBase.h  enumParamEditor.cpp  enumParamEditor.h  (+60 more)
modules/sequencer/: CMakeLists.txt  deviceOpBinder.h  deviceOpConnector.h  imageFromFile.h  io.h  mainWindow.cpp  mainWindow.h  matVector.h  operator.cpp  operator.h  operatorBase.cpp  operatorBase.h  qcvVector.h  seqControlDlg.cpp  seqControlDlg.h  seqControler.cpp  seqControler.h  seqController.cpp  seqController.h  seqDevHDImg.cpp  seqDevHDImg.h  seqDevVideoCapture.cpp  seqDevVideoCapture.h  seqDeviceControl.h
modules/sequencer/gui/: seqControlDlg.ui
qcv-code/: 3DLineList.h  3DMatrix_inline.h  3DMeshList.cpp  3DPointVector.h  3DRowVector.h  CMakeLists.txt  clipLine.h  clock.cpp  clockHandler.cpp  clockTreeDlg.cpp  clockTreeItemModel.cpp  clockTreeView.cpp  colorEncoding.cpp  colors.h  display.cpp  displayImageList.h  displayState.h  displayTreeDlg.h  displayTreeItemModel.h  displayTreeNode.h  displayWidget.cpp  displayWidget.h  drawingElementList.h  drawingList.cpp  drawingListHandler.cpp  drawingListPreview.h  ellipseList.h  eventHandler.cpp  eventHandlerBase.cpp  eventHandlerBase.h  events.h  glViewer.cpp  glViewer.h  glheader.h  header.txt  imgRemapper.cpp  imgRemapper.h  license.txt  lineList.cpp  lineList.h  (+14 more)
qcv-code/cmake/: FindQGLViewer.cmake
qcv-code/examples/: CMakeLists.txt
qcv-code/examples/anaglyphStereo/: anaglyphStereo.cpp
qcv-code/examples/checkStereoPair/: CMakeLists.txt  checkStereoPair.cpp
qcv-code/examples/gfttFreakExample/: CMakeLists.txt
qcv-code/examples/helloWorld/: helloWorld  helloWorld.cpp
qcv-code/examples/houghTransformExample/: main.cpp
qcv-code/examples/imgPlayer/: CMakeLists.txt  imgPlayer.cpp
qcv-code/examples/imgScaler/: CMakeLists.txt  main.cpp
qcv-code/examples/imgs/: left.pgm  right.pgm
qcv-code/examples/sobelExample/: sobelExample.cpp
qcv-code/examples/stereoExample/: main.cpp  sequence.xml
qcv-code/examples/stereoTrackerExample/: CMakeLists.txt  main.cpp
qcv-code/examples/surfExample/: CMakeLists.txt  main.cpp
qcv-code/examples/toyClockExample/: toyClockExample.cpp
qcv-code/modules/: CMakeLists.txt
qcv-code/modules/misc/: camera.cpp  camera.h  feature.cpp  feature.h  rigidMotion.h  stereoCamera.cpp  stereoCamera.h
qcv-code/modules/operators/: dynProgOp.h  featureStereoOp.cpp  featureStereoOp.h  gfttFreakOp.cpp  gfttFreakOp.h  gtMapOp.cpp  gtMapOp.h  imgScalerOp.cpp  imgScalerOp.h  kltTrackerOp.cpp  kltTrackerOp.h  linearHoughTransform.cpp  linearHoughTransform.h  monoTrackerOp.cpp  monoTrackerOp.h  roadPlaneDetectionOp.cpp  roadPlaneDetectionOp.h  sobelOp.h  stereoOp.cpp  stereoOp.h  stereoTrackerOp.cpp  stereoTrackerOp.h  surfOp.h
qcv-code/modules/paramEditor/: 3DVectorParam.cpp  3DVectorParam.h  3DVectorParamEditor.cpp  3DVectorParamEditor.h  baseParamEditorWidget.h  boolParam.cpp  boolParam.h  buttonParam.h  colorParam.h  colorParamEditor.cpp  colorParamEditor.h  dbl2DParamEditor.h  dirPathParam.cpp  displayStateParam.cpp  displayStateParam.h  displayStateParamEditor.cpp  doubleEditor.cpp  doubleEditor.h  doubleParamEditor.cpp  enumParam.h  enumParamBase.h  enumParamEditor.h  enumParam_inline.h  filePathParam.cpp  filePathParamEditor.h  floatParamEditor.cpp  flt2DParam.h  flt2DParamEditor.h  int2DParam.cpp  int2DParam.h  intEditor.h  intParam.h  intParamEditor.cpp  intParamEditor.h  paramBaseConnector.h  paramEditorDlg.cpp  (+20 more)
qcv-code/res/: symbols.qrc
qcv-mods/: CMakeLists.txt  README.txt
qcv-mods/cmake/: FindQCV.cmake
qcv-mods/stereoSFM/: CMakeLists.txt  README.txt
(+86 files in other folders)
